# Matrix_CNN

./: CMakeLists.txt  README.md
include/: FileReader.h  Matrix.h  helper.h
src/: FileReader.cpp  Matrix.cpp  helper.cpp  main.cpp
